# VersionTxtSwitchAndRepair

./: .gitignore  CMakeLists.txt  README.md  fileio.c  fileio.h  firmware_versions.h  main.c
script/: calculateFwSeriesRanges.sh
version_txt_collection/: Firmware 1.00_version.txt  Firmware 1.50_version.txt  Firmware 1.51_version.txt  Firmware 1.52_version.txt  Firmware 2.00v2_version.txt  Firmware 2.01_version.txt  Firmware 2.50_version.txt  Firmware 2.60_version.txt  Firmware 2.70_version.txt  Firmware 2.71_version.txt  Firmware 2.80_version.txt  Firmware 2.81_version.txt  Firmware 2.82_version.txt  Firmware 3.00_version.txt  Firmware 3.01_version.txt  Firmware 3.02_version.txt  Firmware 3.03_version.txt  Firmware 3.10_version.txt  Firmware 3.11_version.txt  Firmware 3.30_version.txt  Firmware 3.40_version.txt  Firmware 3.50_version.txt  Firmware 3.51_version.txt  Firmware 3.52_version.txt  Firmware 3.60_version.txt  Firmware 3.70_version.txt  Firmware 3.71_version.txt  Firmware 3.72_version.txt  Firmware 3.73_version.txt  Firmware 3.80_version.txt  Firmware 3.90_version.txt  Firmware 3.93_version.txt  Firmware 3.95_version.txt  Firmware 3.96_version.txt  Firmware 4.00_version.txt  Firmware 4.01_version.txt  Firmware 4.05_version.txt  Firmware 4.21_version.txt  Firmware 5.01_version.txt  Firmware 5.03_version.txt  (+16 more)
